Change to HTTPS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="refresh" content="2;url=http://martin.bergek.com/" />
+  <meta http-equiv="refresh" content="2;url=https://martin.bergek.com/" />
   <title>Github page - mbergek</title>
   <style>
       * {
